// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VehicleSummaryComponent should create view only with HGV populated data 1`] = `
<test-vtm-vehicle-summary
  activeRecord={[Function Object]}
  viewState="0"
>
  <vtm-vehicle-summary
    ng-reflect-active-record="[object Object]"
    ng-reflect-view-state="0"
  >
    
    
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle type 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleType"
        >
           HGV 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Date of first registration 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-regnDate"
        >
          
          <span>
             08/06/2020 
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Year of manufacture 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-manufactureYear"
        >
           2003 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Number of axles 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-noOfaxles"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           DTP number 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-dtpNumber"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Axles fitted with a parking brake 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-parkingBrakeMrk"
        >
          
          
          
          <div>
            
            <div>
              <span
                id="test-parkingBrakeMrkAxle-1"
              >
                Axle 1
              </span>
            </div>
          </div>
          
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle class 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleClassDescription"
        >
           Motorbikes over 200cc 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle configuration 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleConfiguration"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           EU vehicle category 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-euVehicleCategory"
        >
           3 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Departmental vehicle marker 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-departmentalVehicleMarker"
        >
           Yes 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Alteration marker 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-alterationMarker"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
    </dl>
    
    
    <vtm-vehicle-summary-hgv
      ng-reflect-active-record="[object Object]"
    >
      <div>
        HGV active record is: {
    "approvalType": "approval",
    "regnDate": "2020-06-08",
    "manufactureYear": 2003,
    "euVehicleCategory": "3",
    "departmentalVehicleMarker": true,
    "vehicleClass": {
      "code": "2",
      "description": "motorbikes over 200cc"
    },
    "axles": [
      {
        "parkingBrakeMrk": true,
        "axleNumber": 1,
        "brakes": {
          "brakeActuator": 123,
          "leverLength": 123,
          "springBrakeParking": true
        },
        "tyres": {
          "tyreSize": "16",
          "plyRating": "12S",
          "fitmentCode": "12313",
          "dataTrAxles": 1234
        },
        "weights": {
          "gbWeight": 100,
          "kerbWeight": 150,
          "designWeight": 250,
          "eecWeight": 150
        }
      }
    ],
    "vehicleType": "hgv"
  }
      </div>
    </vtm-vehicle-summary-hgv>
    
    
    
    <dl
      class="govuk-summary-list"
    >
      <h2
        class="govuk-heading-m"
      >
        Type Approval
      </h2>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Approval type
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-approvalType"
        >
           approval 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Approval type number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-approvalTypeNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          National type approval number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-ntaNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Variant number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-variantNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Variant version number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-variantVersionNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      
      
    </dl>
    
    
    
  </vtm-vehicle-summary>
</test-vtm-vehicle-summary>
`;

exports[`VehicleSummaryComponent should create view only with PSV populated data 1`] = `
<test-vtm-vehicle-summary
  activeRecord={[Function Object]}
  viewState="0"
>
  <vtm-vehicle-summary
    ng-reflect-active-record="[object Object]"
    ng-reflect-view-state="0"
  >
    
    
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle type 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleType"
        >
           PSV 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Date of first registration 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-regnDate"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Year of manufacture 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-manufactureYear"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Number of axles 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-noOfaxles"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           DTP number 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-dtpNumber"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Axles fitted with a parking brake 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-parkingBrakeMrk"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle class 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleClassDescription"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle configuration 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleConfiguration"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           EU vehicle category 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-euVehicleCategory"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Departmental vehicle marker 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-departmentalVehicleMarker"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Alteration marker 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-alterationMarker"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
    </dl>
    
    
    
    <vtm-vehicle-summary-psv
      ng-reflect-active-record="[object Object]"
    >
      <div>
        PSV active record is: {
    "vehicleType": "psv",
    "seatbeltInstallationApprovalDate": "2018-05-16"
  }
      </div>
    </vtm-vehicle-summary-psv>
    
    
    <dl
      class="govuk-summary-list"
    >
      <h2
        class="govuk-heading-m"
      >
        Type Approval
      </h2>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Approval type
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-approvalType"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Approval type number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-approvalTypeNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          National type approval number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-ntaNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Variant number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-variantNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Variant version number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-variantVersionNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           COIF serial number 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-coifSerialNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           COIF certifier name 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-coifCertifierName"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           COIF date 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-coifDate"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
    </dl>
    
    
    
  </vtm-vehicle-summary>
</test-vtm-vehicle-summary>
`;

exports[`VehicleSummaryComponent should create view only with TRL populated data 1`] = `
<test-vtm-vehicle-summary
  activeRecord={[Function Object]}
  viewState="0"
>
  <vtm-vehicle-summary
    ng-reflect-active-record="[object Object]"
    ng-reflect-view-state="0"
  >
    
    
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle type 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleType"
        >
           TRL 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Date of first registration 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-regnDate"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Year of manufacture 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-manufactureYear"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Number of axles 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-noOfaxles"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           DTP number 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-dtpNumber"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Axles fitted with a parking brake 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-parkingBrakeMrk"
        >
          
          <span>
            -
          </span>
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle class 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleClassDescription"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Vehicle configuration 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-vehicleConfiguration"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           EU vehicle category 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-euVehicleCategory"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Departmental vehicle marker 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-departmentalVehicleMarker"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
           Alteration marker 
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-alterationMarker"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
    </dl>
    
    
    
    
    <vtm-vehicle-summary-trl
      ng-reflect-active-record="[object Object]"
    >
      <div>
        TRL active record is: {
    "vehicleType": "trl",
    "firstUseDate": "2019-05-16"
  }
      </div>
    </vtm-vehicle-summary-trl>
    
    <dl
      class="govuk-summary-list"
    >
      <h2
        class="govuk-heading-m"
      >
        Type Approval
      </h2>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Approval type
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-approvalType"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Approval type number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-approvalTypeNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          National type approval number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-ntaNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Variant number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-variantNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Variant version number
        </dt>
        <dd
          class="govuk-summary-list__value"
          id="test-variantVersionNumber"
        >
           - 
        </dd>
        <dd
          class="govuk-summary-list__value"
        />
      </div>
      
      
      
    </dl>
    
    
    
  </vtm-vehicle-summary>
</test-vtm-vehicle-summary>
`;

exports[`VehicleSummaryComponent should render the editable component if editState is true 1`] = `
<test-vtm-vehicle-summary
  activeRecord={[Function Object]}
  editState={[Function Boolean]}
  viewState={[Function Number]}
>
  <vtm-vehicle-summary
    ng-reflect-active-record="[object Object]"
    ng-reflect-edit-state="true"
    ng-reflect-view-state="1"
  >
    
    
    
    
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          <vtm-vehicle-summary-edit
            ng-reflect-tech-record="[object Object]"
            ng-reflect-view-state="1"
          >
            <div>
              active record is: {
    "approvalType": "approval",
    "regnDate": "2020-06-08",
    "manufactureYear": 2003,
    "euVehicleCategory": "3",
    "departmentalVehicleMarker": true,
    "vehicleClass": {
      "code": "2",
      "description": "motorbikes over 200cc"
    },
    "axles": [
      {
        "parkingBrakeMrk": true,
        "axleNumber": 1,
        "brakes": {
          "brakeActuator": 123,
          "leverLength": 123,
          "springBrakeParking": true
        },
        "tyres": {
          "tyreSize": "16",
          "plyRating": "12S",
          "fitmentCode": "12313",
          "dataTrAxles": 1234
        },
        "weights": {
          "gbWeight": 100,
          "kerbWeight": 150,
          "designWeight": 250,
          "eecWeight": 150
        }
      }
    ]
  }
            </div>
            <div>
              Current view is: 1 Edit mode
            </div>
          </vtm-vehicle-summary-edit>
        </dt>
      </div>
    </dl>
  </vtm-vehicle-summary>
</test-vtm-vehicle-summary>
`;
